[package]
name = "friend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
ethers = { version="2.0.7", features = ["openssl", "ws"] }
eyre = "0.6.8"
hex = "0.4.3"
reqwest = "0.11"
serde = "1"
serde_derive = "1"
colored = "2.0.0"